# SNID-SAGE

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  TODO.md  __init__.py  fix_imports.py  mkdocs.yml  pyproject.toml  run_snid_cli.py  run_snid_gui.py  run_tests.py  setup_cross_platform.py
.github/workflows/: cli-help-cross-platform.yml  deploy-pypi.yml  test-cross-platform.yml  test-installation.yml  test-pypi-only.yml
docs/: index.md  navigation-guide.md  task-hub.md
docs/ai/: analysis-types.md  openrouter-setup.md  overview.md
docs/assets/: overrides.css
docs/cli/: batch-processing.md  command-reference.md  template-management.md
docs/dev/: contributing.md  plot-swapping-system.md
docs/gui/: ai-assistant.md  interface-overview.md  lines-manager.md  preprocessing.md  redshift-age.md  results-and-plots.md  settings-configuration.md  template-manager.md  templates-manager.md
docs/installation/: icon-setup.md  installation.md
docs/quickstart/: first-analysis.md
docs/reference/: api-reference.md  changelog.md  configuration-guide.md  faq.md  parameters.md  supported-formats.md  troubleshooting.md
docs/tutorials/: advanced-analysis.md  advanced-workflows.md  ai-assisted-analysis.md  basic-analysis.md  classification.md  cli-tutorial.md  index.md  performance-optimization.md  plotting-visualization.md  publication-ready-plots.md  template-management.md
interfaces/cli/: __init__.py  batch.py  identify.py  main.py  template.py
interfaces/gui/: preprocessing_gui.py  sage_gui.py
interfaces/gui/components/analysis/: analysis_plotter.py
interfaces/gui/components/dialogs/: __init__.py  cluster_selection_dialog.py  configuration_dialog.py  enhanced_ai_assistant_dialog.py  manual_redshift_dialog.py  multi_step_emission_dialog.py  preprocessing_dialog.py  snid_analysis_dialog.py  wind_velocity_dialog.py
interfaces/gui/components/forms/: input_controls.py  toggle_controls.py
interfaces/gui/components/plots/: interactive_tools.py  preview_plot_manager.py  spectrum_plotter.py  summary_plotter.py
interfaces/gui/components/widgets/: config_widgets.py  interactive_continuum_widget.py
interfaces/gui/controllers/: app_controller.py  dialog_controller.py  file_controller.py  plot_controller.py  view_controller.py
interfaces/gui/features/analysis/: analysis_controller.py  cluster_summary.py  emission_line_overlay_controller.py  games_integration.py  line_detection.py  manual_selection_controller.py  wind_velocity_controller.py
interfaces/gui/features/configuration/: config_controller.py  gui_settings_controller.py
interfaces/gui/features/preprocessing/: preprocessing_controller.py  preview_calculator.py  spectrum_preprocessor.py
interfaces/gui/features/results/: llm_integration.py  results_manager.py
interfaces/gui/utils/: cross_platform_window.py  event_handlers.py  gui_helpers.py  import_manager.py  improved_button_workflow.py  layout_utils.py  logo_manager.py  no_title_plot_manager.py  spectrum_reset_manager.py  startup_manager.py  state_manager.py  unified_font_manager.py  unified_theme_manager.py  universal_window_manager.py  window_event_handlers.py  workflow_integration.py
interfaces/llm/: llm_integration.py
interfaces/llm/analysis/: llm_utils.py
interfaces/llm/openrouter/: openrouter_llm.py
results_old/: batch_analysis_report.txt  tns_2024ggi.flattened  tns_2024ggi.output
results_old/ggi_analysis/: tns_2024ggi.fluxed  tns_2024ggi.output
results_old/sn2003jo/: sn2003jo.output
scripts/: build_unified_storage.py  check_template_filtering.py  compare_continuum_methods.py  plot_lnw_templates_pdf.py  rebuild_template_storage.py
shared/utils/: results_formatter.py  simple_template_finder.py
shared/utils/config/: configuration_manager.py
shared/utils/data_io/: spectrum_loader.py
shared/utils/line_detection/: fwhm_analysis.py  interactive_fwhm_analyzer.py  line_presets.py  line_selection_utils.py  spectrum_utils.py
shared/utils/logging/: __init__.py  config.py  snid_logger.py
shared/utils/plotting/: plot_theming.py  spectrum_utils.py
shared/utils/wind_analysis/: pcygni_fitting.py  wind_calculations.py
snid/: cosmological_clustering.py  io.py  optimization_integration.py  plotting.py  plotting_3d.py  snid.py  snid_test.py  snidtype.py  template_fft_storage.py  template_manager.py
snid/core/: config.py  integration.py
snid_sage/: __init__.py
snid_sage/interfaces/cli/: batch.py  identify.py  main.py  templates.py
snid_sage/interfaces/gui/: OLD_sage_gui.py  launcher.py  pyside6_gui.py  sage_gui.py
snid_sage/interfaces/gui/controllers/: app_controller.py  dialog_controller.py  file_controller.py  plot_controller.py  pyside6_app_controller.py  pyside6_preprocessing_controller.py
snid_sage/interfaces/gui/utils/: __init__.py  cross_platform_window.py  dialog_button_enhancer.py  enhanced_button_manager.py  event_handlers.py  improved_button_workflow.py  layout_conflict_detector.py  layout_utils.py  pyside6_helpers.py  pyside6_theme_manager.py  pyside6_workflow_manager.py  spectrum_reset_manager.py  startup_manager.py  state_manager.py  unified_pyside6_layout_manager.py  unified_theme_manager.py  (+1 more)
snid_sage/interfaces/line_manager/: main_window.py
snid_sage/interfaces/template_manager/: main_window.py
snid_sage/shared/utils/: match_utils.py  results_formatter.py  secure_storage.py  simple_template_finder.py
snid_sage/snid/: __init__.py  cosmological_clustering.py  io.py  optimization_integration.py  plotting.py  plotting_3d.py  preprocessing.py  snid.py  snidtype.py  template_fft_storage.py  template_manager.py  vectorized_peak_finder.py
snid_sage/snid/core/: config.py  integration.py
snid_sage/templates/: template_index.json  templates_AGN.hdf5  templates_GAP.hdf5  templates_Galaxy.hdf5  templates_Ibn.hdf5  templates_Icn.hdf5  templates_KN.hdf5  templates_LFBOT.hdf5  templates_Star.hdf5  templates_TDE.hdf5
templates/: template_index.json  templates_GAP.hdf5  templates_Galaxy.hdf5  templates_Ibn.hdf5  templates_KN.hdf5  templates_Star.hdf5  templates_TDE.hdf5
tests/: test_cli_integration.py  test_cross_platform.py
(+63 files in other folders)
